data/all_generated_tests/raw_wast_tests/unreachable_EdgeCaseFailuresinbr_table_1610.wast
;; 1. **Test Description:**     A function that includes a `br_table` instruction with an index that exceeds the number of available targets, followed immediately by the `unreachable` instruction to ensure the trap is triggered regardless of the invalid index.    **Constraint Checked:** Tests how each implementation handles an out-of-bounds index in `br_table` leading to a trap.    **Edge Case Relation:** Ensures the invalid index results in a consistent trap when combined with the `unreachable` instruction.

(assert_invalid
  (module (func $br_table-unreachable
    (block
      (br_table 1 (block $l) (unreachable))
    )
  ))
  "type mismatch"
)